# Lattice

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  DESIGN.md  DETECTION.md  EXTENDING.md  INTERMEDIATE_REPRESENTATION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  bitbucket-pipelines.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  scan-on-pr.yml
agentscan/: __init__.py  _compat.py  _fileutil.py  benchmark.py  cli.py  cli_compliance.py  dashboard.html  doctor.py  drift.py  models.py  risk_register.py  ui.py  ui_html.py  ui_server.py
agentscan/compliance/: audit_report.py  dpia.py  framework_mapper.py
agentscan/graph/: ai_sql.py  cli_graph.py  engine.py  escalation.py  nodes.py  trust_flow.py  visualiser.py
agentscan/identity/: agent_identity.py
agentscan/outputs/: html_report.py  json_output.py  terminal.py
agentscan/runtime/: analyser.py  cli_runtime.py  events.py  goal_integrity.py  prompt_flow.py
agentscan/runtime/integrations/: __init__.py  autogen_hook.py  crewai_cb.py  langchain_cb.py  monitor.py  openai_hook.py
agentscan/scanners/: agent_scanner.py  capabilities.py  mcp_scanner.py  mcp_scanner_v2.py  mcp_trust_chain.py  source_scanner.py  supply_chain_scanner.py
docs/: ADVANCED.md
examples/: goal_drift_session.json  sample_session.json
examples/agent_configs/: dangerous_agent.yaml  safe_agent.yaml
examples/frameworks/: README.md  autogen_example.py  bedrock_agents_example.py  crewai_example.py  google_adk_example.py  langgraph_example.py  openai_agents_example.py  semantic_kernel_example.py
examples/mcp_manifests/: dangerous_mcp.json  middle_server.json  risky_downstream_server.json  trusted_server.json
examples/real_codebase/: support_agent.py
examples/safe_agents/01_scoped_search_agent/: README.md  agent.yaml
examples/test_batch/: 1_crewai_research_crew.py  2_autogen_devops_bot.py  3_safe_translation_agent.yaml  4_openai_agents_hr_finance.py  5_mixed_mcp_server.json  6_semantic_kernel_finance_plugin.py  7_nova_act_agent.py
examples/vulnerable_agents/: README.md  run_benchmark.py
examples/vulnerable_agents/01_prompt_injection/: README.md  agent.yaml
examples/vulnerable_agents/02_secret_exfiltration/: README.md  agent.yaml
examples/vulnerable_agents/03_shell_execution/: README.md  devops_agent.py
examples/vulnerable_agents/04_database_exfiltration/: README.md  mcp_server.json
examples/vulnerable_agents/05_financial_fraud/: README.md  finance_agent.py
examples/vulnerable_agents/06_nova_act_credential_exfil/: README.md  nova_act_agent.py
examples/vulnerable_agents/07_custom_inhouse_agent/: README.md  internal_agent.py
examples/vulnerable_agents/08_nocode_dify_export/: README.md  dify_export.yml
examples/vulnerable_agents/09_pydantic_ai_llamaindex/: README.md  llamaindex_agent.py  pydantic_ai_agent.py
examples/vulnerable_agents/10_n8n_flowise_nocode/: README.md  flowise_export.json  n8n_workflow.json
examples/vulnerable_agents/11_haystack/: README.md  haystack_agent.py
rfcs/: 0001-capability-model.md  0002-attack-graph.md  0003-risk-engine.md  0004-trust-flow.md
tests/unit/: test_agent_scanner.py  test_ai_sql.py  test_behavioral_detection.py  test_benchmark_cli.py  test_capabilities_canonical.py  test_compliance.py  test_doctor.py  test_drift.py  test_escalation.py  test_goal_integrity.py  test_graph_engine.py  test_hardening.py  test_html_report.py  test_mcp_scanner.py  test_mcp_scanner_v2.py  test_mcp_trust_chain.py  test_risk_register.py  test_round6_findings.py  test_runtime.py  test_runtime_monitor.py  test_source_scanner.py  test_supply_chain_scanner.py  test_supply_chain_v2.py  test_trust_flow.py
