[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscan"
version = "0.4.4"
description = "Security scanner for AI agents, MCP servers, and AI supply chain artifacts — with attack graph engine and compliance reporting"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sneh Singh", email = "sneh2105@gmail.com" }]
keywords = [
  "security", "ai", "llm", "agents", "mcp", "supply-chain",
  "appsec", "attack-graph", "compliance", "rbi", "dpdp", "iso42001"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.9",
]

[project.scripts]
agentscan = "agentscan.cli:main"

[project.urls]
Homepage      = "https://github.com/sneh2105/agentscan"
Documentation = "https://github.com/sneh2105/agentscan/blob/main/docs/"
Issues        = "https://github.com/sneh2105/agentscan/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
agentscan = ["outputs/assets/*.js"]
